--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
-    {{ content }}
+    <div class="page-content">
+        {{ content }}
+    </div>
     
     <!-- Load typewriter animation script -->
     <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
